# ddos-reduction-system

./: .gitignore  README.md  run.sh
attachments/: Abdullah_Armiyao_CY384_Proposal_Rust.docx  Stage 1 in depth.txt  Stage 2 in depth.txt  project_overview.md
scripts/: install.bat  install.sh  run.sh  uninstall.sh  update.sh
stage1/: Cargo.toml
stage1/src/: analysis.rs  capture.rs  entropy.rs  ewma.rs  ipc.rs  main.rs  testing results.txt  welford.rs
stage2/: requirements.txt  setup_admin.py  stage2.db  stage2.py  train.py
stage2/static/: active_ips.html  base.css  firewall.html  index.html  interfaces.html  ir.html  login.html  logs.html  targets.html
